--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Mekylad Site Plan</h1>
+    <h1>Mekhylad Site Plan</h1>
     <h2>Jorge Nelsi Linares Polo</h2>
     <h2>WDD 130-SECTION</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,13 +20,13 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Mekylad es una empresa de tecnología cuyo propósito es satisfacer las necesidades de los usuarios y clientes,
-     en cuanto a servicio, desarrollo, mantenimiento de programas, paginas web y venta de accesorios de equipos de computo</p>
+    <p>Mekhylad is a technology company whose purpose is to satisfy the needs of users and customers,
+      in terms of service, development, maintenance of programs, web pages and sale of computer equipment accessories.
+     </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Dirigimos nuestros servicios a todo tipo de audiencia, pero en especial hacia los profesionales que utilizan
-    productos y equipo de tecnología</p>
+    <p>We address our services to all types of audience, but especially to professionals who use technology products and equipment.</p>
     <!-- change this -->
 
     <hr />
@@ -78,17 +78,12 @@
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, White Water Rafting Company
-      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+      Mekhilad offers a wide range of services to provide an experience of pleasure, efficiency and safety for its clients. such as web page development, software development for operating systems, applications, web browsers, games or programs.
+      also sells, services and maintains computer equipment and cell phones.
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
-      Trips vary from mild and great for families, to trips exclusively for
-      physically fit and experienced rafters. No matter what type of river
-      adventures you are seeking, White Water Rafting Company can make it
-      happen for you.
+      Mekhilad is a company that aims to provide service within the city of Barcelona for the first two years and then progressively reach a greater presence in the national market throughout Spain.
     </p>
 
     <!-- ------------------------Step 13------------------------------ -->
